--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^2.4.9
   badges: ^3.1.2
+  freezed: ^2.4.6
+  freezed_annotation: ^2.4.1
+  build_runner: ^2.4.8
+  realm: ^1.7.0
+  logger: ^2.0.2+1
 
 dev_dependencies:
   flutter_test:
