--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   build_runner: ^2.4.8
   realm: ^1.7.0
   logger: ^2.0.2+1
+  package_info: ^2.0.2
 
 dev_dependencies:
   flutter_test:
