--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,10 @@ dependencies:
   intl: ^0.19.0
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.9.2
   flutter_test:
     sdk: flutter
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -98,3 +100,11 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/icon_ios.png"
+  image_path_android: "assets/icon_android.png"
+  adaptive_icon_foreground: "assets/icon_android.png"
+  adaptive_icon_background: "#46B4EB"
